Crear entidad del departamento de venta, se crea la clase para departamento en la capa Dal

--- a/EjercicioCiclismo/BackEnd/Entities/Entities.csproj
+++ b/EjercicioCiclismo/BackEnd/Entities/Entities.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DepartamentoE.cs" />
     <Compile Include="ProductoE.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
