--- a/EjercicioCiclismo/BackEnd/DAL/Dal.csproj
+++ b/EjercicioCiclismo/BackEnd/DAL/Dal.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DepartamentoDal.cs" />
     <Compile Include="ProductoDal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
