--- a/EjercicioCiclismo/BackEnd/DAL/Dal.csproj
+++ b/EjercicioCiclismo/BackEnd/DAL/Dal.csproj
@@ -45,6 +45,7 @@
     <Compile Include="DepartamentoDal.cs" />
     <Compile Include="ProductoDal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UsuarioDal.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Entities\Entities.csproj">
