--- a/EjercicioCiclismo/BackEnd/Entities/Entities.csproj
+++ b/EjercicioCiclismo/BackEnd/Entities/Entities.csproj
@@ -44,6 +44,7 @@
     <Compile Include="DepartamentoE.cs" />
     <Compile Include="ProductoE.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UsuarioE.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
