agregar metodos para agregar e insertar una factura

--- a/EjercicioCiclismo/MiddleWare/WebApi/WebApi/WebApi.csproj
+++ b/EjercicioCiclismo/MiddleWare/WebApi/WebApi/WebApi.csproj
@@ -306,6 +306,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\DepartamentoController.cs" />
+    <Compile Include="Controllers\FacturaController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ProductoController.cs" />
     <Compile Include="Controllers\UsuarioController.cs" />
@@ -369,6 +370,7 @@
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
     <Folder Include="Views\Departamento\" />
+    <Folder Include="Views\Factura\" />
     <Folder Include="Views\Usuario\" />
   </ItemGroup>
   <ItemGroup>
