--- a/EjercicioCiclismo/BackEnd/DAL/Dal.csproj
+++ b/EjercicioCiclismo/BackEnd/DAL/Dal.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DepartamentoDal.cs" />
+    <Compile Include="FacturaDal.cs" />
     <Compile Include="ProductoDal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UsuarioDal.cs" />
