--- a/EjercicioCiclismo/BackEnd/Entities/Entities.csproj
+++ b/EjercicioCiclismo/BackEnd/Entities/Entities.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DepartamentoE.cs" />
+    <Compile Include="FacturaXUsuario.cs" />
     <Compile Include="ProductoE.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UsuarioE.cs" />
